--- a/src/index.less
+++ b/src/index.less
@@ -1,7 +1,19 @@
 @color: red;
 body{
-    background: @color;
+    // background: @color;
     background-image: url("../public/images/bg.jpg");
     background-size: cover;
     transition: all 2s;
+}
+
+.container {
+  display: flex;
+}
+
+::placeholder {
+  color: gray;
+}
+
+::selection {
+  color: aquamarine;
 }
